--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             <div id="weapon-container">
                 <div id="current-weapon" class="weapon-display">PISTOL</div>
             </div>
+            
+            <button id="end-game-button">END GAME</button>
         </div>
         
         <div id="game-over" class="hidden">
