--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
             
             <div id="wave-container">
                 <div class="wave-info">
-                    <span class="wave-label">WAVE</span>
-                    <span id="wave" class="wave-value">1</span>
-                </div>
-                <div class="wave-info">
-                    <span class="wave-label">ZOMBIES</span>
+                    <span class="wave-label">ZOMBIES LEFT</span>
                     <span id="zombies" class="wave-value">0</span>
                 </div>
                 <div class="wave-info">
