--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <canvas id="game-canvas"></canvas>
         
         <div id="start-screen">
-            <h1>INFECTED</h1>
+            <h1>INFECTED.GG</h1>
             <div class="game-subtitle">ZOMBIE SURVIVAL</div>
             
             <div class="input-container">
